# diamond-hands-rs

./: .gitignore
contract/: Cargo.toml  README.md  erdpy.json
contract/abi/: Cargo.toml
contract/abi/src/: main.rs
contract/mandos/: deposit-multiple.scen.json  deposit-once.scen.json  init.scen.json  withdraw-once-deposit-multiple.scen.json  withdraw.scen.json
contract/src/: lib.rs
contract/wasm/: Cargo.toml
contract/wasm/src/: lib.rs
