[package]
name = "diamond-hands-wasm"
version = "0.0.1"
authors = [ "",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.diamond-hands]
features = [ "wasm-output-mode",]
path = ".."

[dependencies.elrond-wasm-output]
version = "0.22.2"
features = [ "wasm-output-mode",]
